Updated docs and readme
